<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="4dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Api_key"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edit_api_key"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="text"
                android:hint="@string/Api_key_goes_here"
                android:autofillHints="password" />

            <Button
                android:id="@+id/btn_save_check_api_key"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Save"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Service_configuration"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/start_service"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:text="@string/Start_service"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/stop_service"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:text="@string/Stop_service"
                style="?android:attr/buttonBarButtonStyle" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Check_number"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edit_number_check"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                tools:ignore="HardcodedText,TextFields"
                android:inputType="text"
                android:hint="+33974963892 or 0974963892"
                android:autofillHints="phone" />

            <Button
                android:id="@+id/btn_check_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Check"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Various"/>

        <Button
            android:id="@+id/btn_goto_notification_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:text="@string/Configure_notification"/>

        <Button
            android:id="@+id/btn_test_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Test_notification"
            android:layout_marginHorizontal="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>